<resources>
    <string name="app_name">MorGan Movies</string>
    <string name="morgan_movies">Morgan Movies</string>
    <string name="black_widow">Black Widow</string>
    <string name="description">Washed-up MMA fighter Cole Young, unaware of his heritage, and hunted by Emperor Shang Tsung\'s best warrior, Sub-Zero, seeks out and trains with Earth\'s greatest champions as he prepares to stand against the enemies of Outworld in a high stakes battle for the universe.</string>
    <string name="biography_description">An American and Canadian actor, producer and semi-retired professional wrestler, signed with WWE.  Johnson is half-Black and half-Samoan. His father, Rocky Johnson, is a Black Canadian, from Nova Scotia, and part of the first Black tag team champions in WWE history back when it was known as the WWF along with Tony Atlas. His mother is Samoan and the daughter of Peter Maivia, who was also a pro wrestler askjdasjd has doihao oiashd as foiahsiof asououas uasfiohaou auo ouafjsdhuisw we98 w0lkdnf oua h8wemuofqheui tqamasn jadn fuer ygrgmnwsj hweuioq dfkjasg f8qoifslmkvnwpi j80q asdb aniufgwiuf 9qwe guwehfousdh fousahdoiuafouiwh 8fwe0sdoi 08w yu8we ihiw 80yw08 w0eioweh 80wey 8wehwe908 yw80 ywohw80wy 80w oiush d8f sjfnsjd 80wws wuweg ywet fow nolw 0. </string>
    <string name="overview">Overview</string>
    <string name="date_11_5_2021">11/5/2021</string>
    <string name="release_date">Release Date : </string>
    <string name="_7_5">7.5</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star_rate">Star Rate</string>
    <string name="title_activity_sing_up">SingUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trailer">Trailer</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="genres">Genres</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">UP Coming</string>
    <string name="trending">Trending</string>
    <string name="see_more">See More</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="comedy">Comedy</string>
    <string name="there_are_no_movies_to_show">There are no movies to show</string>
    <string name="there_are_no_actors_to_show">There are no actors to show</string>
    <string name="there_are_no_videos_to_show">There are no videos to show</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="my_profile">My Profile</string>
    <string name="search">search</string>
    <string name="my_favorites">My Favorites</string>
    <string name="rate_us">Rate Us</string>
    <string name="follow_us">Follow Us</string>
    <string name="log_out">Log Out</string>
    <string name="favorites">Favorites</string>
    <string name="todo">TODO</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="ok_txt">Okay</string>
    <string name="ooops">Ooops!</string>
    <string name="no_translate_to_arabic">"للأسف لا يوجد ترجمة للغة العربية "</string>
    <string name="recommendation">Recommendation</string>
    <string name="actors">Actors</string>
    <string name="trending_actors">Trending Actors</string>
    <string name="birthday">Birthday:</string>
    <string name="died">Died:</string>
    <string name="born">Born:</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="date">Date</string>
    <string name="rate">Rate</string>
</resources>