<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.example.ds_movies.data.models.MovieItem" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/_8sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_12sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_325sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/movie_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="fitXY"
                    android:src="@drawable/black_widow" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/movie_title"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@{model.title}"
                android:hint="@string/black_widow"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view" />

            <ImageView
                android:id="@+id/star_rate"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/star_rate"
                android:src="@drawable/star"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                app:layout_constraintStart_toStartOf="@id/guideline_start" />

            <TextView
                android:id="@+id/movie_vote_rate"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:hint="@string/_7_5"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/star_rate"
                app:layout_constraintBottom_toBottomOf="@+id/star_rate"
                app:layout_constraintTop_toTopOf="@id/star_rate" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_movie_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="@+id/movie_vote_rate"
                app:layout_constraintBottom_toBottomOf="@+id/movie_vote_rate">

                <TextView
                    android:id="@+id/txt_movie_trailer"
                    style="@style/Theme.MovieTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/icon_youtube"
                    app:layout_constraintBottom_toBottomOf="@id/txt_movie_trailer"
                    app:layout_constraintStart_toEndOf="@id/txt_movie_trailer"
                    app:layout_constraintTop_toTopOf="@id/txt_movie_trailer"
                    android:contentDescription="@string/todo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/movie_categories"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:hint="@string/comedy"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/star_rate"
                app:layout_constraintStart_toStartOf="@id/guideline_start" />

            <TextView
                android:id="@+id/release_date_text"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/release_date"
                android:textColor="@color/Red"
                android:textColorHint="@color/Red"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/movie_categories" />

            <TextView
                android:id="@+id/movie_release_date"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@{model.releaseDate}"
                android:hint="@string/date"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toEndOf="@+id/release_date_text"
                app:layout_constraintTop_toTopOf="@id/release_date_text" />

            <ImageView
                android:id="@+id/favorite_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_non_favorite"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="@+id/movie_release_date"
                app:layout_constraintBottom_toBottomOf="@+id/movie_release_date"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:contentDescription="@string/todo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/movie_release_date"
                tools:listitem="@layout/item_cast" />

            <TextView
                android:id="@+id/over_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/comic_sans"
                android:text="@string/overview"
                android:textColor="@color/Red"
                android:textColorHint="@color/Red"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/cast_recycler" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/rounded_black_op_corner_50_red_stroke"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="@+id/over_view"
                app:layout_constraintBottom_toBottomOf="@+id/over_view">

                <ImageView
                    android:id="@+id/ic_lang"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_sans"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:text="@string/arabic"
                    android:textColor="@color/Red"
                    android:textColorHint="@color/Red"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintStart_toEndOf="@+id/ic_lang"
                    app:layout_constraintTop_toTopOf="@id/ic_lang"
                    app:layout_constraintBottom_toBottomOf="@id/ic_lang"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/movie_description"
                style="@style/Theme.MovieTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@{model.overview}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/over_view"
                tools:text="@string/description"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendation_movies_recyclerview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/movie_description"
                tools:listitem="@layout/item_movie_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>