<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/dialog_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_container"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/rounded_black_op_corner_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/comic_sans_bold"
            android:text="@string/ooops"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/Gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:fontFamily="@font/comic_sans"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/Gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_error"
            tools:text="@string/no_internet_connection"/>

        <TextView
            android:id="@+id/ok_btn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:fontFamily="@font/comic_sans_bold"
            android:padding="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/ok_txt"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/black_op"
            android:background="@drawable/shape_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/dialog_container"
        app:layout_constraintEnd_toEndOf="@+id/dialog_container"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_top">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/circle_x"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>